--- a/home/wiki/Change_log/v3.7.1.1.html
+++ b/home/wiki/Change_log/v3.7.1.1.html
@@ -25,24 +25,40 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#v3.7.1.1_.282017-07-03.29"><span class="tocnumber">1</span> <span class="toctext">v3.7.1.1 (2017-07-03)</span></a> 
+          <a href="#v3.7.1.2_.282017-07-03.29"><span class="tocnumber">1</span> <span class="toctext">v3.7.1.2 (2017-07-03)</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-2">
+          <a href="#v3.7.1.1_.282017-07-03.29"><span class="tocnumber">2</span> <span class="toctext">v3.7.1.1 (2017-07-03)</span></a> 
           <ul>
-            <li class="toclevel-2 tocsection-2">
-              <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
-            </li>
             <li class="toclevel-2 tocsection-3">
-              <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
+              <a href="#Wiki"><span class="tocnumber">2.1</span> <span class="toctext">Wiki</span></a>
             </li>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Android"><span class="tocnumber">1.3</span> <span class="toctext">Android</span></a>
+              <a href="#PC"><span class="tocnumber">2.2</span> <span class="toctext">PC</span></a>
             </li>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Dev"><span class="tocnumber">1.4</span> <span class="toctext">Dev</span></a>
+              <a href="#Android"><span class="tocnumber">2.3</span> <span class="toctext">Android</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-6">
+              <a href="#Dev"><span class="tocnumber">2.4</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
+    <h2>
+      <span class="mw-headline" id="v3.7.1.2_.282017-07-03.29">v3.7.1.2 (2017-07-03)</span>
+    </h2>
+    <ul>
+      <li>
+        Search: Do not fail when searching for multiple words. [broken since: v3.6.3.1] {detected by William; Ope30}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Cast double to int to handle HTML dumps from 2016-05 and earlier.
+      </dd>
+    </dl>
     <h2>
       <span class="mw-headline" id="v3.7.1.1_.282017-07-03.29">v3.7.1.1 (2017-07-03)</span>
     </h2>
