--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -28,10 +28,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_windows_64_v3.7.1.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_windows_64_v3.7.1.2.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_windows_v3.7.1.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_windows_v3.7.1.2.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -39,10 +39,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_linux_64_v3.7.1.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_linux_64_v3.7.1.2.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_linux_v3.7.1.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_linux_v3.7.1.2.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -50,10 +50,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_macosx_64_v3.7.1.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_macosx_64_v3.7.1.2.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_macosx_v3.7.1.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_macosx_v3.7.1.2.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -61,7 +61,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_arm_v3.7.1.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_arm_v3.7.1.2.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -69,7 +69,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_android_v3.7.1.1.apk" rel="nofollow" class="external text">Android</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_android_v3.7.1.2.apk" rel="nofollow" class="external text">Android</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +77,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.7.1.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v3.7.1.2.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -88,6 +88,19 @@
         <a href="https://github.com/gnosygnu/xowa_android/archive/master.zip" rel="nofollow" class="external text">Source code (Android)</a>
       </li>
     </ul>
+    <h2>
+      <span class="mw-headline" id="v3.7.1.2_.282017-07-03.29">v3.7.1.2 (2017-07-03)</span>
+    </h2>
+    <ul>
+      <li>
+        Search: Do not fail when searching for multiple words. [broken since: v3.6.3.1] {detected by William; Ope30}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Cast double to int to handle HTML dumps from 2016-05 and earlier.
+      </dd>
+    </dl>
     <h2>
       <span class="mw-headline" id="v3.7.1.1_.282017-07-03.29">v3.7.1.1 (2017-07-03)</span>
     </h2>
